# ece-5490-sp19

./: README.md
exams/miatt-final-exam-2019-abpwrs/: MIATT_FINAL.ipynb  README.md
exams/midtermexam-abpwrs/: CMakeLists.txt  README.md
exams/midtermexam-abpwrs/ComputeInterPupilaryDistance/: CMakeLists.txt  ComputeInterPupilaryDistance.cxx  ComputeInterPupilaryDistance.xml  TASK.md
exams/midtermexam-abpwrs/EdgeSlicerModule/: EdgeSlicerModule.cxx  EdgeSlicerModule.xml  TASK.md
exams/midtermexam-abpwrs/QUESTIONS/: TASK.md
hw/hw0-abpwrs/: .gitignore  README.md
hw/hw0-abpwrs/src/: CMakeLists.txt  HW0.cxx
hw/hw02-abpwrs/: CMakeLists.txt  README.md
hw/hw02-abpwrs/src/: CMakeLists.txt  HW2.cxx
hw/hw03-abpwrs/: CMakeLists.txt  README.md
hw/hw03-abpwrs/src/: CMakeLists.txt
hw/hw04-abpwrs/: CMakeLists.txt  README.md
hw/hw04-abpwrs/register/: register.cxx  (+2 more)
hw/hw05-abpwrs/: CMakeLists.txt  README.md
hw/hw06-abpwrs/: .gitignore  HW06.ipynb  HeuristicTrain.ipynb  README.md  extra_fiducial_report.html  failed_le.list  report.html
hw/hw07-abpwrs/: HW07.ipynb  classifier.pickle  failed_re.list
hw/hw08-abpwrs/: HW8functions.py  ITKMakeImageFromScratch.ipynb  MakingLabelMask.ipynb  STRAIGHT_CONV.ipynb  medianhelper.py  mlhelper.py
inclass/inclass1-abpwrs/: CMakeLists.txt  HelloWorld.cxx
inclass/inclass2-abpwrs/: CMakeLists.txt  README.md
inclass/inclass3-abpwrs/: .gitignore  0_Index.ipynb  1_Introduction_to_the_Insight_Toolkit.ipynb  2_Image_Filtering.ipynb  3_Segmentation.ipynb  4_ITK_in_Python.ipynb  5_Registration.ipynb  README.md  requirements.txt
(+42 files in other folders)
